# astrakon

./: .gitignore  README.md  main.py  pyproject.toml  run_api.py
agents/: ai_commander.py  alphazero_agent.py  base.py  human.py  mcts_agent.py  rule_based.py  web.py
api/: main.py  models.py  runner.py  session.py
api/routes/: game.py  scenarios.py
engine/: action_space.py  core_game.py  events.py  openspiel_env.py  preview.py  referee.py  simulation.py  state.py  tech_tree.py
output/: aar.py  audit.py  strategy_lib.py
personas/: builder.py
personas/archetypes/: commercial_broker.yaml  gray_zone.yaml  iron_napoleon.yaml  mahanian.yaml  (+2 more)
runners/: evaluation.py  headless.py  tournament.py
scenarios/: cislunar_crossroads.yaml  loader.py  pacific_crossroads.yaml  signal_dominance.yaml
scripts/: benchmark_coregame.py  train_alphazero.py
tests/: conftest.py  test_action_space.py  test_agents.py  test_api.py  test_audit.py  test_combat_events.py  test_core_game.py  test_forecast_ledger.py  test_integration.py  test_league.py  test_mcts_agent.py  test_network.py  test_openspiel_env.py  test_operation_preview.py  test_persona_builder.py  test_referee.py  test_runner.py  test_scenario_loader.py  test_self_play.py  test_session.py  test_simulation.py  test_state.py  test_tech_tree.py  test_tournament.py  test_trainer.py  test_web_agent.py
training/: league.py  network.py  replay_buffer.py  self_play.py  trainer.py
tui/: header.py  invest.py  phases.py  summary.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+43 files in other folders)
