[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "space-wargame"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.20.0",
    "ruamel.yaml>=0.18.0",
    "rich>=13.0.0",
]

[tool.setuptools]
packages = ["engine", "agents", "personas", "scenarios", "output"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
