[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "space-wargame"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.20.0",
    "ruamel.yaml>=0.18.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "open-spiel>=1.4",
    "numpy>=1.26",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
